--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://templatemo.com/tm-556-catalog-z
             <img src="img/LOGO.png" id="QRE">
             <a class="navbar-brand" href="index.html">
                 TU PIEL, PASIÓN POR TÍ<br>
-                                    <span class="descr">PRODUCTOS DE CUIDADO CORPORAL Y BELLEZA</span>
+                                    <span class="descr">PASIÓN PARA ELLA Y EL. </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -65,7 +65,7 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <span id="credito">Ultima Modificacion el:<br>
-            10 de febrero de 2025, 8:20 a.m.</span>
+            27 de febrero de 2025, 3:43 a.m.</span>
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
                 RETRO, PASIÓN PARA ELLA Y ÉL
@@ -81,7 +81,7 @@ https://templatemo.com/tm-556-catalog-z
                 <figure class="effect-ming tm-video-item">
                     <img src="img/corporalcream.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>HUMECTANTES CORPORALES </h2>
+                        <h2>HUMECTANTES </h2>
                         <a href="portfolio/humectantes/HUMECTANT.html">VER: Piel, Pasión por ti </a>
                     </figcaption>                    
                 </figure>
@@ -92,7 +92,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/2.png" alt="Image" class="img-fluid">
+                    <img src="https://th.bing.com/th/id/R.fcf7aa4469e7198f0fbe40e273cc2f3a?rik=Htqa5jgVgyPXQA&riu=http%3a%2f%2fi271.photobucket.com%2falbums%2fjj124%2flexironnie%2fPerfumes1.jpg&ehk=XuAyoh%2bPoIYnxaJ1tTHv1TFX6PHIttW77oi84q65bzg%3d&risl=&pid=ImgRaw&r=0" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>PERFUMERÍA </h2>
                         <a href="portfolio/perfumeria/perfum.html">FRAGANCIAS </a>
@@ -105,7 +105,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/Rmakeup.png" alt="Image" class="img-fluid">
+                    <img src="img/Rmakeup.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>MAQUILLAJE </h2>
                         <a href="portfolio/makeup/makeup1.html">¡quiero!</a>
@@ -118,9 +118,9 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/thekingoff.jpg" alt="Image" class="img-fluid">
+                    <img src="https://th.bing.com/th/id/OIP.5CBu5EgX4XlY2YSvm4nhywHaEK?rs=1&pid=ImgDetMain" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>RETRO GAMER </h2>
+                        <h2>VIDEOJUEGOS </h2>
                         <a href="VJ.html">¿COMO LLEGAR?</a>
                     </figcaption>                    
                 </figure>
@@ -132,10 +132,10 @@ https://templatemo.com/tm-556-catalog-z
             
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/fitness-s.jpg" alt="Image" class="img-fluid">
+                    <img src="https://th.bing.com/th/id/R.08105d5627c3d5b3bb2e00d2ab5592fa?rik=Hu%2bxwChXJZ5jeQ&riu=http%3a%2f%2fupload.wikimedia.org%2fwikipedia%2fcommons%2f3%2f3e%2fBarbell_Group_Fitness_Class2.JPG&ehk=vv5K8sdDfn3qpAYSIswEDtBuhosxaDFh%2f6eGQuesNC4%3d&risl=&pid=ImgRaw&r=0" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>ENTRENAMIENTO FISICO. </h2>
-                        <a href="fitness.html">View more</a>
+                        <h2>FITNESS</h2>
+                        <a href="portfolio/fitness/retrof.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -147,7 +147,7 @@ https://templatemo.com/tm-556-catalog-z
                 <figure class="effect-ming tm-video-item">
                     <img src="img/img-.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Perfumes</h2>
+                        <h2>CONSEJOS </h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -160,7 +160,7 @@ https://templatemo.com/tm-556-catalog-z
                 <figure class="effect-ming tm-video-item">
                     <img src="img/img-.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Bus</h2>
+                        <h2>TRUCOS </h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -173,117 +173,13 @@ https://templatemo.com/tm-556-catalog-z
                 <figure class="effect-ming tm-video-item">
                     <img src="img/img-.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>New York</h2>
+                        <h2>NOVEDADES </h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">12 Sep 2020</span>
                     <span>11,300 views</span>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
-                    <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Abstract</h2>
-                        <a href="photo-detail.html">View more</a>
-                    </figcaption>                    
-                </figure>
-                <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">10 Sep 2020</span>
-                    <span>42,700 views</span>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
-                    <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Flowers</h2>
-                        <a href="photo-detail.html">View more</a>
-                    </figcaption>                    
-                </figure>
-                <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">8 Sep 2020</span>
-                    <span>11,402 views</span>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
-                    <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Rosy</h2>
-                        <a href="photo-detail.html">View more</a>
-                    </figcaption>                    
-                </figure>
-                <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">4 Sep 2020</span>
-                    <span>32,906 views</span>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
-                    <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Rocki</h2>
-                        <a href="photo-detail.html">View more</a>
-                    </figcaption>                    
-                </figure>
-                <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">28 Aug 2020</span>
-                    <span>50,700 views</span>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
-                    <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Purple</h2>
-                        <a href="photo-detail.html">View more</a>
-                    </figcaption>                    
-                </figure>
-                <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">22 Aug 2020</span>
-                    <span>107,510 views</span>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
-                    <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Sea</h2>
-                        <a href="photo-detail.html">View more</a>
-                    </figcaption>                    
-                </figure>
-                <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">14 Aug 2020</span>
-                    <span>118,006 views</span>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
-                    <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Turtle</h2>
-                        <a href="photo-detail.html">View more</a>
-                    </figcaption>                    
-                </figure>
-                <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">9 Aug 2020</span>
-                    <span>121,300 views</span>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
-                <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
-                    <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Peace</h2>
-                        <a href="photo-detail.html">View more</a>
-                    </figcaption>                    
-                </figure>
-                <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">3 Aug 2020</span>
-                    <span>21,204 views</span>
                 </div>
             </div>
         </div> <!-- row -->
@@ -327,10 +223,10 @@ https://templatemo.com/tm-556-catalog-z
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <ul class="tm-social-links d-flex justify-content-end pl-0 mb-5">
-                        <li class="mb-2"><a href="https://www.facebook.com/profile.php?id=61564821212499" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-                        <li class="mb-2"><a href="https://www.instagram.com/pasionellayel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="iconr"><a href="https://www.tiktok.com/@pasionparaellayel?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/001-tik-tok.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=FreepikFreepika from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
-                        <li class="iconr"><a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/" target="_blank"><img src="img/002-store.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=FreepikFreepika from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.facebook.com/profile.php?id=61564821212499" target="_blank"><img src="img/001-facebook.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Facebook from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.instagram.com/pasionellayel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="img/004-instagram.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Instagram from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.tiktok.com/@pasionparaellayel?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/003-tik-tok.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=TikTok from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/" target="_blank"><img src="img/002-store.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Tienda from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
                     </ul>
                     <a href="#" class="tm-text-gray text-right d-block mb-2">Terminos de uso</a>
                     <a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/pages/cook/cookies.html" class="tm-text-gray text-right d-block" target="_blank">Politica de privacidad</a>
@@ -343,7 +239,7 @@ https://templatemo.com/tm-556-catalog-z
 
             </div>
                 <div class="col-lg-4 col-md-5 col-12 px-5 text-right">
-                    Designed by <a href="https://templatemo.com" class="tm-text-gray" rel="sponsored" target="_parent">TemplateMo</a><br>
+                    Designed by <a href="https://templatemo.com" target:="_blank" class="tm-text-gray" rel="sponsored" target="_parent">TemplateMo</a><br>
                     Edited by <a href="https://linktr.ee/neastronaut" target="_blank" class="tm-text-gray" rel="sponsored" target="_parent">N DE COLOMBIA</a>
                 </div>
             </div>
