--- a/portfolio/perfumeria/perfum.html
+++ b/portfolio/perfumeria/perfum.html
@@ -27,30 +27,29 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <div class="container-fluid">
-                <img src="../../img/LOGO.png" id="QREh">
-                <a class="navbar-brand" href="../../index.html">
-                    TU PIEL, PASIÓN POR TÍ<br>
-                                        <span class="descr">PRODUCTOS DE CUIDADO CORPORAL Y BELLEZA</span>
-                </a>
+            <img src="../../img/LOGO.png" id="QRE">
+            <a class="navbar-brand" href="perfum.html">
+                TU PIEL, PASIÓN POR TÍ<br>
+                                    <span class="descr">PASIÓN PARA ELLA Y EL. </span>
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-1" href="../../index.html">INICIO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-2" href="videos.html">VIDEOS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-3" href="https://www.blogger.com/about/?hl=es" target="_blank">INFORMACION</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-4" aria-current="page" href="../../contact.html">CONTACTO</a>
-                    </li>
-                </ul>
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link nav-link-1" aria-current="page" href="../../index.html">INICIO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-2" href="../../videos.html">GALERIA </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-3" href="https://www.blogger.com/about/?hl=es" target="_blank">INFORMACION</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-4" href="../../contact.html">CONTACTO</a>
+                </li>
+            </ul>
             </div>
         </div>
     </nav>
@@ -66,13 +65,15 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <span id="credito">Ultima Modificacion el:<br>
-            3 de febrero de 2025, 12:45 p.m.</span>
+            28 de febrero de 2025, 8:37 a.m.</span>
         <div class="row mb-4">
-            <h2 class="col-12 tm-text-primary">HUMECTANTES CORPORALES </h2>
+            <h2 class="col-12 tm-text-primary">PERFUMERÍA, TU PIEL. PASIÓN POR TI</h2>
         </div>
         <div class="row tm-mb-90">            
-            <div class="col-xl-8 col-lg-7 col-md-6 col-sm-12">
-                <img src="../../img/creamproduct.jpg" alt="Image" class="img-fluid">
+            <div class="col-xl-8 col-lg-7 col-md-6 col-sm-12"> 
+                <video autoplay muted loop controls id="tm-video">
+                    <source src="../../video/perfumer.mp4" type="video/mp4">
+                </video> 
             </div>
             <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12">
                 <div class="tm-bg-gray tm-video-details">
@@ -80,8 +81,10 @@ https://templatemo.com/tm-556-catalog-z
                NECESITO SOPORTE CON UNA PAGINA WEB!     <a href="HTTPS://linktr.ee/neastronaut" target="_blank" rel="sponsored">NdeCOLOMBIA. </a>
                     </p>
                     <div class="text-center mb-5">
-                        <img src="../../img/cremahe.jpeg" class="imghmc">
-                        <a href="#" class="btn btn-primary tm-btn-big">PEDIR HUMECTANTE</a>
+                        <img src="../../img/perfumer2.jpg" class="imghmc">
+                        <a href="https://wa.me/+573132808002?text=Hola!%20Saludos,%20Me%20comunico%20con%20ustedes%20por%20medio%20del%20acceso%20a%20Tu%20piel.%20Pasión%20por%20ti,%20estoy%20interesado%20en%20descubrir%20informacion%20acerca%20de%20los%20productos%20de%20perfumeria.%20GRACIAS,%20
+                      
+                        mensaje enviado mediante N servers." target="_blank" class="btn btn-primary tm-btn-big">¡QUIERO!. </a>
                     </div>                    
                     <div class="mb-4 d-flex flex-wrap">
                         <div class="mr-4 mb-2">
@@ -247,18 +250,17 @@ https://templatemo.com/tm-556-catalog-z
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <ul class="tm-social-links d-flex justify-content-end pl-0 mb-5">
-                        <li class="mb-2"><a href="https://www.facebook.com/profile.php?id=61564821212499" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-                        <li class="mb-2"><a href="https://www.instagram.com/pasionellayel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="iconr"><a href="https://www.tiktok.com/@pasionparaellayel?is_from_webapp=1&sender_device=pc" target="_blank"><img src="../../img/001-tik-tok.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=FreepikFreepika from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
-                        <li class="iconr"><a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/" target="_blank"><img src="../../img/002-store.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=FreepikFreepika from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.facebook.com/profile.php?id=61564821212499" target="_blank"><img src="../../img/001-facebook.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Facebook from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.instagram.com/pasionellayel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="../../img/004-instagram.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Instagram from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.tiktok.com/@pasionparaellayel?is_from_webapp=1&sender_device=pc" target="_blank"><img src="../../img/003-tik-tok.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=TikTok from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/" target="_blank"><img src="../../img/002-store.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Tienda from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
                     </ul>
                     <a href="#" class="tm-text-gray text-right d-block mb-2">Terminos de uso</a>
                     <a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/pages/cook/cookies.html" class="tm-text-gray text-right d-block" target="_blank">Politica de privacidad</a>
                 </div>
-            </div>
             <div class="row">
                 <div class="col-lg-8 col-md-7 col-12 px-5 mb-3">
-                    COPYRIGHT 2025 - NofCOLOMBIA(neamstrongc) - PASIÓN PARA ELLA Y ÉL.<br>
+                    Copyright 2020 Catalog-Z Company. All rights reserved.
                 </div>
                 <div class="col-lg-4 col-md-5 col-12 px-5 text-right">
                     Designed by <a href="https://templatemo.com" class="tm-text-gray" rel="sponsored" target="_parent">TemplateMo</a><br>
